<resources>
    <string name="app_name">ВелоМотор</string>
    <string name="app_under_name">Свобода движения! Скорость жизни!</string>

    <string name="menu_history">История поездок</string>
    <string name="menu_home">Главная</string>
    <string name="menu_login">Войти</string>
    <string name="menu_logup">Зарегистрироваться</string>
    <string name="menu_logout">Выйти</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_safety">Безопасность</string>
    <string name="menu_stock">Акции</string>
    <string name="menu_support">Поддержка</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="android:statusBarColor">#00000000</string>-->
</resources>